--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "server.ts",
   "scripts": {
     "dev": "nodemon --exec ts-node ./server.ts",
-    "postinstall": "npx prisma generate --schema ./prisma/schema.prisma",
-    "migrate": "npx prisma migrate dev --name init"
+    "postinstall": "npx prisma generate --schema ./prisma/schema.prisma && bash ./scripts/setup.sh",
+    "migrate": "npx prisma migrate dev --name init",
+    "build": "tsc --build",
+    "start": "node ./dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,7 @@
     "better-sqlite3": "^11.3.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dockerode": "^4.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "form-data": "^4.0.0",
@@ -26,6 +29,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
+    "@types/dockerode": "^3.3.31",
     "@types/express": "^4.17.21",
     "@types/node": "^22.2.0",
     "@types/uuid": "^10.0.0",
