--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon --exec ts-node ./server.ts",
     "postinstall": "npx prisma generate --schema ./prisma/schema.prisma && bash ./scripts/setup.sh",
     "migrate": "npx prisma migrate dev --name init",
-    "build": "rm -rf dist && tsc --build",
+    "build": "rimraf -rf dist && tsc --build",
     "start": "node ./dist/server.js"
   },
   "keywords": [],
@@ -24,6 +24,7 @@
     "express": "^4.19.2",
     "form-data": "^4.0.0",
     "quick.db": "^9.1.7",
+    "rm": "^0.1.8",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/node": "^22.2.0",
     "@types/uuid": "^10.0.0",
     "prisma": "^5.18.0",
+    "rimraf": "^6.0.1",
     "typescript": "^5.5.4"
   }
 }
